--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 	<div class="col-md-4 col-md-offset-8"><!-- begin nav tabs -->
 		<ul class="nav nav-tabs pull-right">
-		  <li class="active"><a href="#">Home</a></li>
 		  <li><a href="#">About</a></li>
+		  <li><a href="#how">How It Works</a></li>
+		  <li><a href="#portfolio">Portfolio</a></li>
 		  <li><a href="#contact">Contact</a></li>
 		</ul>
 	</div><!-- end container: header -->
@@ -21,15 +22,18 @@
 	<div class="jumbotron"><!-- begin banner layout -->
 		<div class="container-fluid">
 			<div class="header-img img-responsive">
-				<p class="header-text center-block">
+				<p class="header-text ">
 					Michelle Barba <br>
-					Designer/Developer
+					Technology Designer/Developer <br>
+				</p>
+				<p class="skills-text">
+					HTML   ~   CSS   ~   JavaScript
 				</p>
 			</div> <!-- end of headre image-->
 		</div>
 	</div> <!-- end jumbotron-->
 
-	<div id="story" class="container-fluid how-background">
+	<div id="how" class="container-fluid how-background">
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
@@ -73,7 +77,7 @@
         </div><!-- end row -->
     </div><!-- end container-fluid:  -->
 
-    <div class="div">
+    <div id="portfolio">
         <div class="container-fluid portfolio-sample">
             <div class="row">
                 <div class="col-md-3"></div>
@@ -86,7 +90,7 @@
         </div>
     </div>
 
-	<div class="container-fluid"><!-- begin Contact form -->
+	<div id="contact" class="container-fluid"><!-- begin Contact form -->
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-9">
@@ -97,7 +101,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit inventore explicabo atque vitae voluptatem numquam officiis impedit reiciendis a tempore! Cum aliquid consequatur labore error, quod omnis accus. Alias similique itaque suscipit praesentium ipsam molestiae!
 			</div>
 		</div> <!-- end contact section 1 -->
-		<div id="contact" class="row">  <!-- begin contact form section 2 -->
+		<div class="row">  <!-- begin contact form section 2 -->
 			<div class="col-md-4"></div>
 			<div class="col-md-4 contact-section">
 				<div class="col-md-3"></div>
@@ -135,7 +139,7 @@
 					Michelle Barba <br>
 					Fresno, Ca <br>
 					(999) 999-9999 <br>
-					<a href="mailto:info@mbarba.com">info@mbarbaa.com</a>
+					<a href="mailto:info@mbarba.com">info@mbarba.com</a>
 				</address>
 			</div>
 			<div class="col-md-3 footer-cols">
@@ -145,7 +149,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<p class ="footer-bottom-text"> &copy; Michelle Barba, All Rights Reserved
+			<p class ="footer-bottom-text"> &copy;2016 Michelle Barba, All Rights Reserved
 		</div>
 	</div>
 
